--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
     </div>
   </div>
   <div class="loadpicWrap" style='display:none;'>
-    <img src="arr.png" alt="">
-    <img src="bg.jpg" alt="">
-    <img src="bg1.jpg" alt="">
-    <img src="bg2.jpg" alt="">
-    <img src="cloz.png" alt="">
-    <img src="logo.png" alt="">
-    <img src="p1.png" alt="">
-    <img src="p2.png" alt="">
-    <img src="p3.png" alt="">
-    <img src="p4.png" alt="">
-    <img src="p5.png" alt="">
-    <img src="p6.png" alt="">
+    <img src="images/arr.png" alt="">
+    <img src="images/bg.jpg" alt="">
+    <img src="images/bg1.jpg" alt="">
+    <img src="images/bg2.jpg" alt="">
+    <img src="images/cloz.png" alt="">
+    <img src="images/logo.png" alt="">
+    <img src="images/p1.png" alt="">
+    <img src="images/p2.png" alt="">
+    <img src="images/p3.png" alt="">
+    <img src="images/p4.png" alt="">
+    <img src="images/p5.png" alt="">
+    <img src="images/p6.png" alt="">
   </div>
   <script type="text/javascript" src="js/index.js"></script>
 
